# CTL

./: .gitignore  README.md
compiler/: CMakeLists.txt  CTLLexer.g4  CTLParser.g4  main.cpp
compiler/cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
test/: test.py
test/examples/: Journalist.ctl  videoDoc.ctl
